--- a/index.html
+++ b/index.html
@@ -58,40 +58,22 @@
             <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
                 aria-label="Slide 3"></button>
         </div>
+
         <div class="carousel-inner">
-            <div class="carousel-item active">
+            <!-- <div class="carousel-item active">
                 <img class="w-100 img-fluid d-md-none" src="./assets/Mobile/banner1-mobile.png"
                     alt="Modelo feminina vestindo blusa rosa fluorescente, em fundo lilás.">
                 <img class="w-100 img-fluid d-none d-md-block d-xl-none" src="./assets/Tablet/banner1-tablet.png"
                     alt="Modelo feminina vestindo blusa rosa fluorescente, em fundo lilás.">
                 <img class="w-100 img-fluid d-none d-xl-block" src="./assets/Desktop/banner1-desktop.png"
                     alt="Modelo feminina vestindo blusa rosa fluorescente, em fundo lilás.">
-            </div>
-            <div class="carousel-item">
-                <img class="w-100 img-fluid d-md-none" src="./assets/Mobile/banner2-mobile.png"
-                    alt="Modelo feminina utilizando óculos escuros e vestindo conjunto esportivo de blusa e calça na cor preta, sentada em um sofá preto em um fundo rosa.">
-                <img class="w-100 img-fluid d-none d-md-block d-xl-none" src="./assets/Tablet/banner2-tablet.png"
-                    alt="Modelo feminina utilizando óculos escuros e vestindo conjunto esportivo de blusa e calça na cor preta, sentada em um sofá preto em um fundo rosa.">
-                <img class="w-100 img-fluid d-none d-xl-block" src="./assets/Desktop/banner2-desktop.png"
-                    alt="Modelo feminina utilizando óculos escuros e vestindo conjunto esportivo de blusa e calça na cor preta, sentada em um sofá preto em um fundo rosa.">
                 <div class="carousel-caption">
                     <h5 class="fs-1">COLEÇÃO ATEMPORAL</h5>
                     <p class="fs-4">Estilo e qualidade para durar.</p>
                 </div>
-            </div>
-            <div class="carousel-item">
-                <img class="w-100 img-fluid d-md-none" src="./assets/Mobile/banner3-mobile.png"
-                    alt="Modelo feminina utilizando óculos escuros e vestindo conjunto esportivo de blusa e calça na cor preta, sentada em um sofá preto em um fundo rosa.">
-                <img class="w-100 img-fluid d-none d-md-block d-xl-none" src="./assets/Tablet/banner3-tablet.png"
-                    alt="Modelo feminina utilizando óculos escuros e vestindo conjunto esportivo de blusa e calça na cor preta, sentada em um sofá preto em um fundo rosa.">
-                <img class="w-100 img-fluid d-none d-xl-block" src="./assets/Desktop/banner3-desktop.png"
-                    alt="Modelo feminina utilizando óculos escuros e vestindo conjunto esportivo de blusa e calça na cor preta, sentada em um sofá preto em um fundo rosa.">
-                <div class="carousel-caption">
-                    <h5 class="fs-1">COLEÇÃO ATEMPORAL</h5>
-                    <p class="fs-4">Alto impacto visual, baixo impacto ambiental!</p>
-                </div>
-            </div>
+            </div> -->
         </div>
+
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
             data-bs-slide="prev">
             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -106,9 +88,9 @@
 
     <h2 class="text-center my-3 my-xl-5">Busque por categoria:</h2>
 
-    <div class="container row mx-auto g-4">
+    <div class="categoriasContainer container row mx-auto g-4">
 
-        <div class="col-6 col-md-4 col-xxl-2">
+        <!-- <div class="col-6 col-md-4 col-xxl-2">
             <div class="card rounded-0 border-0">
                 <img class="d-md-none d-block" src="./assets/Mobile/categorias/categoria-camiseta.png"
                     alt="Camiseta masculina de manga na cor verde, com bolso, com detalhe vermelho.">
@@ -122,95 +104,15 @@
                     </p>
                 </div>
             </div>
-        </div>
-
-        <div class="col-6 col-md-4 col-xxl-2">
-            <div class="card rounded-0 border-0">
-                <img class="d-md-none d-block" src="./assets/Mobile/categorias/categoria-bolsas.png"
-                    alt="Bolsa feminina de couro na cor marrom, com cortes quadrados, e alça dourada em formato de corrente com detalhe verde, em fundo verde limão.">
-                <img class="d-none d-md-block d-xl-none" src="./assets/Tablet/categorias/categoria-bolsas.png"
-                    alt="Bolsa feminina de couro na cor marrom, com cortes quadrados, e alça dourada em formato de corrente com detalhe verde, em fundo verde limão.">
-                <img class="d-none d-xl-block" src="./assets/Desktop/categorias/categoria-bolsa.png"
-                    alt="Bolsa feminina de couro na cor marrom, com cortes quadrados, e alça dourada em formato de corrente com detalhe verde, em fundo verde limão.">
-                <div class="card-header bg-black text-bg-dark">
-                    <p class="text-center card-text">
-                        Bolsas
-                    </p>
-                </div>
-            </div>
-        </div>
-
-        <div class="col-6 col-md-4 col-xxl-2">
-            <div class="card rounded-0 border-0">
-                <img class="d-md-none d-block" src="./assets/Mobile/categorias/categoria-calcados.png"
-                    alt="Par de tênis unissex com cor predominante branca e traços na cores laranja, azul, verde e cadarço vermelho, em fundo verde limão.">
-                <img class="d-none d-md-block d-xl-none" src="./assets/Tablet/categorias/categoria-calcados.png"
-                    alt="Par de tênis unissex com cor predominante branca e traços na cores laranja, azul, verde e cadarço vermelho, em fundo verde limão.">
-                <img class="d-none d-xl-block" src="./assets/Desktop/categorias/categoria-calcados.png"
-                    alt="Par de tênis unissex com cor predominante branca e traços na cores laranja, azul, verde e cadarço vermelho, em fundo verde limão.">
-                <div class="card-header bg-black text-bg-dark">
-                    <p class="text-center card-text">
-                        Calçados
-                    </p>
-                </div>
-            </div>
-        </div>
-
-        <div class="col-6 col-md-4 col-xxl-2">
-            <div class="card rounded-0 border-0">
-                <img class="d-md-none d-block" src="./assets/Mobile/categorias/categoria-calcas.png"
-                    alt="Quatro calças jeans dobradas e organizadas uma acima da outra, em fundo verde limão.">
-                <img class="d-none d-md-block d-xl-none" src="./assets/Tablet/categorias/categoria-calcas.png"
-                    alt="Quatro calças jeans dobradas e organizadas uma acima da outra, em fundo verde limão.">
-                <img class="d-none d-xl-block" src="./assets/Desktop/categorias/categoria-calcas.png"
-                    alt="Quatro calças jeans dobradas e organizadas uma acima da outra, em fundo verde limão.">
-                <div class="card-header bg-black text-bg-dark">
-                    <p class="text-center card-text">
-                        Calças
-                    </p>
-                </div>
-            </div>
-        </div>
-
-        <div class="col-6 col-md-4 col-xxl-2">
-            <div class="card rounded-0 border-0">
-                <img class="d-md-none d-block" src="./assets/Mobile/categorias/categoria-casacos.png"
-                    alt="Casaco masculino na cor marrom em fundo verde limão.">
-                <img class="d-none d-md-block d-xl-none" src="./assets/Tablet/categorias/categoria-casacos.png"
-                    alt="Casaco masculino na cor marrom em fundo verde limão.">
-                <img class="d-none d-xl-block" src="./assets/Desktop/categorias/categoria-casacos.png"
-                    alt="Casaco masculino na cor marrom em fundo verde limão.">
-                <div class="card-header bg-black text-bg-dark">
-                    <p class="text-center card-text">
-                        Casacos
-                    </p>
-                </div>
-            </div>
-        </div>
-
-        <div class="col-6 col-md-4 col-xxl-2">
-            <div class="card rounded-0 border-0">
-                <img class="d-md-none d-block" src="./assets/Mobile/categorias/categoria-oculos.png"
-                    alt="Óculos de Sol com lentes arredondadas e armação dourada, em fundo verde limão.">
-                <img class="d-none d-md-block d-xl-none" src="./assets/Tablet/categorias/categoria-oculos.png"
-                    alt="Óculos de Sol com lentes arredondadas e armação dourada, em fundo verde limão.">
-                <img class="d-none d-xl-block" src="./assets/Desktop/categorias/categoria-oculos.png"
-                    alt="Óculos de Sol com lentes arredondadas e armação dourada, em fundo verde limão.">
-                <div class="card-header bg-black text-bg-dark">
-                    <p class="text-center card-text">
-                        Óculos
-                    </p>
-                </div>
-            </div>
-        </div>
+        </div> -->
 
     </div>
 
     <h2 class="container text-center my-3 my-xl-5">Produtos que estão bombando!</h2>
 
-    <div class="container row mx-auto">
+    <div class="produtosCointainer container row mx-auto">
 
-        <div class="col-12 col-md-6 col-xxl-4 pb-4">
+        <!-- <div class="col-12 col-md-6 col-xxl-4 pb-4">
             <div class="card">
                 <img class="d-block d-md-none" src="./assets/Mobile/produtos/camiseta.png"
                     alt="Modelo masculo vestindo touca preta, blusa marrom e calça jeans, com uma parede cinza de fundo.">
@@ -228,94 +130,7 @@
                     <a href="#" class="btn btn-primary btn__ver-mais rounded-0 border-0">Ver mais</a>
                 </div>
             </div>
-        </div>
-
-        <div class="col-12 col-md-6 col-xxl-4 pb-4">
-            <div class="card">
-                <img class="d-block d-md-none" src="./assets/Mobile/produtos/calca.png"
-                    alt="Modelo feminina vestindo blusa marrom, calça bege, par de sapatos altos na cor branca, cordão e pulseira, em um ambiente aberto com chão de terra e matos secos.">
-                <img class="d-none d-md-block d-xl-none" src="./assets/Tablet/produtos/calca.png"
-                    alt="Modelo feminina vestindo blusa marrom, calça bege, par de sapatos altos na cor branca, cordão e pulseira, em um ambiente aberto com chão de terra e matos secos.">
-                <img class="d-none d-xl-block" src="./assets/Desktop/produtos/calca.png"
-                    alt="Modelo feminina vestindo blusa marrom, calça bege, par de sapatos altos na cor branca, cordão e pulseira, em um ambiente aberto com chão de terra e matos secos.">
-                <div class="card-body">
-                    <h5 class="card-title fw-bold">Calça Alfaiataria</h5>
-                    <p class="card-text">Modelo Wide Leg alfaiataria em linho. Uma peça para vida toda!</p>
-                    <p class="fw-bold">R$180,00</p>
-                    <a href="#" class="btn btn-primary btn__ver-mais rounded-0 border-0">Ver mais</a>
-                </div>
-            </div>
-        </div>
-
-        <div class="col-12 col-md-6 col-xxl-4 pb-4">
-            <div class="card">
-                <img class="d-block d-md-none" src="./assets/Mobile/produtos/tenis.png"
-                    alt="Foco nos pés de modelo usando par de tênis e meia na cor branca, e calça na cor preta, pisando em uma poça de água.">
-                <img class="d-none d-md-block d-xl-none" src="./assets/Tablet/produtos/tenis.png"
-                    alt="Foco nos pés de modelo usando par de tênis e meia na cor branca, e calça na cor preta, pisando em uma poça de água.">
-                <img class="d-none d-xl-block" src="./assets/Desktop/produtos/tenis.png"
-                    alt="Foco nos pés de modelo usando par de tênis e meia na cor branca, e calça na cor preta, pisando em uma poça de água.">
-                <div class="card-body">
-                    <h5 class="card-title fw-bold">Tênis Chunky</h5>
-                    <p class="card-text">Snicker casual com solado mais alto e modelagem robusta. Modelo unissex.</p>
-                    <p class="fw-bold">R$250,00</p>
-                    <a href="#" class="btn btn-primary btn__ver-mais rounded-0 border-0">Ver mais</a>
-                </div>
-            </div>
-        </div>
-
-        <div class="col-12 col-md-6 col-xxl-4 pb-4">
-            <div class="card">
-                <img class="d-block d-md-none" src="./assets/Mobile/produtos/jaqueta-jeans.png"
-                    alt="Modelo masculino vestindo toca e calça na cor preta, jaqueta jeans azul, blusa branca e cordão dourado, em um fundo branco.">
-                <img class="d-none d-md-block d-xl-none" src="./assets/Tablet/produtos/jaqueta-jeans.png"
-                    alt="Modelo masculino vestindo toca e calça na cor preta, jaqueta jeans azul, blusa branca e cordão dourado, em um fundo branco.">
-                <img class="d-none d-xl-block" src="./assets/Desktop/produtos/jaqueta-jeans.png"
-                    alt="Modelo masculino vestindo toca e calça na cor preta, jaqueta jeans azul, blusa branca e cordão dourado, em um fundo branco.">
-                <div class="card-body">
-                    <h5 class="card-title fw-bold">Jaqueta Jeans</h5>
-                    <p class="card-text">Modelo unissex oversized com gola de camurça. Atemporal e autêntica!</p>
-                    <p class="fw-bold">R$150,00</p>
-                    <a href="#" class="btn btn-primary btn__ver-mais rounded-0 border-0">Ver mais</a>
-                </div>
-            </div>
-        </div>
-
-        <div class="col-12 col-md-6 col-xxl-4 pb-4">
-            <div class="card">
-                <img class="d-block d-md-none" src="./assets/Mobile/produtos/oculos.png"
-                    alt="Modelo masculino com blusa branca e um par de óculos de lentes transparentes arredondadas, utilizando um notebook, com um cachorro poodle branco no seu colo, e em um fundo branco.">
-                <img class="d-none d-md-block d-xl-none" src="./assets/Tablet/produtos/oculos.png"
-                    alt="Modelo masculino com blusa branca e um par de óculos de lentes transparentes arredondadas, utilizando um notebook, com um cachorro poodle branco no seu colo, e em um fundo branco.">
-                <img class="d-none d-xl-block" src="./assets/Desktop/produtos/oculos.png"
-                    alt="Modelo masculino com blusa branca e um par de óculos de lentes transparentes arredondadas, utilizando um notebook, com um cachorro poodle branco no seu colo, e em um fundo branco.">
-                <div class="card-body">
-                    <h5 class="card-title fw-bold">Óculos Redondo</h5>
-                    <p class="card-text">Armação metálica em grafite com lentes arredondadas. Sem erro!</p>
-                    <p class="fw-bold">R$120,00</p>
-                    <a href="#" class="btn btn-primary btn__ver-mais rounded-0 border-0">Ver mais</a>
-                </div>
-            </div>
-        </div>
-
-        <div class="col-12 col-md-6 col-xxl-4 pb-4">
-            <div class="card">
-                <img class="d-block d-md-none" src="./assets/Mobile/produtos/bolsa.png"
-                    alt="Cintura, pernas e pés de modelo feminina vestindo sobretudo de cor predominante bege com detalhes em tom vermelho e escuro, com calça e par de sapatos na cor preta, segurando bolsa na cor bege, com fundo de prédio.">
-                <img class="d-none d-md-block d-xl-none" src="./assets/Tablet/produtos/bolsa.png"
-                    alt="Cintura, pernas e pés de modelo feminina vestindo sobretudo de cor predominante bege com detalhes em tom vermelho e escuro, com calça e par de sapatos na cor preta, segurando bolsa na cor bege, com fundo de prédio.">
-                <img class="d-none d-xl-block" src="./assets/Desktop/produtos/bolsa.png"
-                    alt="Cintura, pernas e pés de modelo feminina vestindo sobretudo de cor predominante bege com detalhes em tom vermelho e escuro, com calça e par de sapatos na cor preta, segurando bolsa na cor bege, com fundo de prédio.">
-                <div class="card-body">
-                    <h5 class="card-title fw-bold">Bolsa coringa</h5>
-                    <p class="card-text">Bolsa camel em couro sintético de alta duração. Ideal para acompanhar você por
-                        uma
-                        vida!</p>
-                    <p class="fw-bold">R$120,00</p>
-                    <a href="#" class="btn btn-primary btn__ver-mais rounded-0 border-0">Ver mais</a>
-                </div>
-            </div>
-        </div>
+        </div> -->
 
     </div>
 
@@ -369,6 +184,10 @@
         <p class="py-3">2023 <i class="bi bi-c-circle"></i> Desenvolvido por Alura | Projeto fictício sem fins
             comerciais.</p>
     </footer>
+
+    <script src="./scripts/carousel.js"></script>
+    <script src="./scripts/cardCategorias.js"></script>
+    <script src="./scripts/cardProdutos.js"></script>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
